--- a/login.html
+++ b/login.html
@@ -47,6 +47,9 @@
           <a href="register.html"><button class="btn btn-LogIn">Register Now</button></a>
         </div>
       </div>
+      <h1 class="h-font form-heading mobile-heading">
+          Welcome From <span class="logo-text">DoBu</span> Martial Arts
+        </h1>
       <div class="right-section" style="display: flex; justify-content: center;">
         <h1 class="h-font register-heading">
           LogIn
