--- a/register.html
+++ b/register.html
@@ -46,6 +46,9 @@
         <a href="login.html"><button class="btn btn-LogIn">LogIn</button></a>
         </div>
       </div>
+      <h1 class="h-font form-heading mobile-heading">
+          Register for <span class="logo-text">DoBu</span> Martial Arts
+        </h1>
       <div class="right-section">
         <h1 class="h-font register-heading">
           Register Here
